@@ -71,7 +71,7 @@ function _it_inistProxy {
       export ftp_proxy="http://proxyout.inist.fr:8080"
       export FTP_PROXY="http://proxyout.inist.fr:8080"
       #
-      _it_std_setAction "system" $TRUE
+      _it_std_setAction "shell" $TRUE
     ;;
     
     help)
@@ -79,7 +79,7 @@ function _it_inistProxy {
     ;;
     
     status)
-      _it_std_getStatus "system"
+      _it_std_getStatus "shell"
     ;;
     
     *)
