@@ -119,7 +119,7 @@ if [ "$platform" == "debian" ]; then
   
 elif [ "$platform" == "ubuntu" ]; then
 
-  ubuntuVersion=$(cat /etc/lsb-release | grep -i "DISTRIB_RELEASE" | cut -d"=" -f 2 | tr -d".")
+  ubuntuVersion=$(cat /etc/lsb-release | grep -i "DISTRIB_RELEASE" | cut -d"=" -f 2 | tr --delete ".")
   ubuntuMajor=$(echo "$ubuntuVersion" | cut -d"." -f 1)
   ubuntuMinor=$(echo "$ubuntuVersion" | cut -d"." -f 2)
   
@@ -135,7 +135,7 @@ elif [ "$platform" == "ubuntu" ]; then
         _it_std_consoleMessage "OK" "docker redémarré"
       else
         _it_std_consoleMessage "NOK" "docker n'est pas redémarré"
-        return $FALSE
+        exit $FALSE
       fi
     ;;
     
